Updated Readme with Artifacts Section